# template-python-project-repo

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
